# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: cli.py  diff.py  encode_files.py  encoder.py  gendiff.py  tags_and_common_data.py
gendiff/format/: default.py  json.py  make_formatted_string.py  plain.py  string_editor.py
gendiff/scripts/: run.py
tests/: test_gendiff.py
tests/fixtures/: expected1_json.txt  expected2_json.txt  expected3_json.txt  expected_nested_common_diff.txt  flat_expected.txt  flat_expected_common_diff.txt  json_expected.json  json_expected_common_diff.txt  nested_expected.txt  nested_expected_common_diff.txt  plain_expected_common_diff.txt
